--- a/app/src/main/res/drawable/rounded_corner_supperclub.xml
+++ b/app/src/main/res/drawable/rounded_corner_supperclub.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2022. Todos los contenidos de este Sitio (Incluyendo, pero no limitado a, texto, logotipos, contenido, fotografías, audio, botones, nombres comerciales y vídeo) están sujetos a derechos de propiedad por las leyes de Derechos de Autor y demás Leyes relativas Internacionales a Androidphoria y de terceros titulares de los mismos que han autorizado debidamente su inclusión.
   ~
   ~   En ningún caso se entenderá que se concede licencia alguna o se efectúa renuncia, transmisión, cesión total o parcial de dichos derechos ni se confiere ningún derecho, y en especial, de alteración, explotación, reproducción, distribución o comunicación publica sobre dichos contenido sin la previa autorización expresa de Androidphoria o de los titulares correspondientes.
@@ -8,37 +7,15 @@
   ~
   ~  Leonardo Ariel Scandura Garcia.
   -->
-
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.labibliapr"
-    android:versionName="labibliapr">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/iconobiblia"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/iconobiblia_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.LaBibliaPr">
-        <activity
-            android:name=".Supperclub"
-            android:exported="false" />
-        <activity
-            android:name=".Seagrill"
-            android:exported="false" />
-        <activity
-            android:name=".Chiringuito"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-
-</manifest>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:color="@color/black"
+        android:width="1dp"/>
+    <solid android:color="@color/colorsupperclub"/>
+    <padding
+        android:left="1dp"
+        android:bottom="1dp"
+        android:right="1dp"
+        android:top="1dp"/>
+    <corners android:radius="20dp"/>
+</shape>
