--- a/app/src/main/res/layout/activity_chiringuito.xml
+++ b/app/src/main/res/layout/activity_chiringuito.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@+id/BuscarCoctel"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,68 +24,62 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/BuscarCoctel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#F47538"
-                android:gravity="center"
-                android:hint="Buscar Coctel"
-                android:textColorHint="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="HardcodedText,MissingConstraints" />
 
             <EditText
                 android:id="@+id/tvnombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="152dp"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="24dp"
                 android:autofillHints=""
-                android:background="@color/colorchiringuito"
+                android:background="@drawable/rounded_corner_chiringuito"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="Nombre del coctel"
+                android:hint="Buscar tu coctel"
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/BuscarCoctel"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
-                app:layout_constraintVertical_bias="0.074"
+                app:layout_constraintHorizontal_bias="0.208"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvdescripcion"
-                android:layout_width="309dp"
-                android:layout_height="71dp"
-                android:layout_marginTop="64dp"
+                android:layout_width="match_parent"
+                android:layout_height="155dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
                 android:autofillHints=""
-                android:background="@color/colorchiringuito"
+                android:background="@drawable/rounded_corner_chiringuito"
                 android:ems="10"
-                android:gravity="start|top"
+                android:gravity="center_horizontal|center_vertical"
                 android:hint="Descripción"
                 android:inputType="textMultiLine"
                 android:textColor="@color/white"
                 android:textColorHint="#FFFFFF"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
+                app:layout_constraintTop_toBottomOf="@+id/tvnombre"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvmetodo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                android:background="@color/colorchiringuito"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner_chiringuito"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Metodo de preparación"
@@ -95,18 +89,20 @@
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.808"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
+                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvdecoracion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                android:background="@color/colorchiringuito"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner_chiringuito"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="@string/decoracion"
@@ -115,7 +111,7 @@
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.191"
+                app:layout_constraintHorizontal_bias="0.148"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
                 tools:ignore="Autofill" />
@@ -125,44 +121,54 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
-                android:background="@color/colorchiringuito"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="24dp"
+                android:background="@drawable/rounded_corner_chiringuito"
                 android:contentDescription="Buscar coctel"
                 android:onClick="buscar"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.36"
+                app:layout_constraintHorizontal_bias="0.013"
                 app:layout_constraintStart_toEndOf="@+id/tvnombre"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
-                app:layout_constraintVertical_bias="0.444"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.769"
                 app:srcCompat="@android:drawable/ic_menu_search"
                 tools:ignore="HardcodedText,RtlHardcoded" />
-
 
             <TextView
                 android:id="@+id/Signatures"
                 android:layout_width="match_parent"
-                android:layout_height="59dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/colorchiringuito"
+                android:layout_height="111dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/rounded_corner_chiringuito"
                 android:gravity="center"
                 android:text="@string/signatures"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/botonvolverchiringuito"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.515"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
-                app:layout_constraintVertical_bias="0.106" />
+                app:layout_constraintTop_toBottomOf="@+id/tvmetodo"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/DannyMargarita"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/rounded_corner_chiringuito"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:text="@string/danny_s_margarita"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imageView2"
+                app:layout_constraintHorizontal_bias="0.516"
+                app:layout_constraintStart_toStartOf="@+id/imageView2"
                 app:layout_constraintTop_toBottomOf="@+id/Signatures" />
 
             <TextView
@@ -170,35 +176,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/rounded_corner_chiringuito"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:text="@string/coco_chili_mojito"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.512"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/Signatures" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
                 android:contentDescription="@string/coco_chili_mojito"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/CocoMojito"
-                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/cocomojito" />
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:contentDescription="@string/danny_s_margarita"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView"
-                app:layout_constraintHorizontal_bias="0.152"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/DannyMargarita"
-                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/dannymargarita">
 
             </ImageView>
@@ -207,14 +214,15 @@
                 android:id="@+id/botonvolverchiringuito"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:backgroundTint="#FF333333"
                 android:text="@string/btnvolver"
                 android:textSize="11sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.547"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
