--- a/app/src/main/res/layout/activity_seagrill.xml
+++ b/app/src/main/res/layout/activity_seagrill.xml
@@ -22,51 +22,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/BuscarCoctel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorseagrill"
-                android:gravity="center"
-                android:hint="Buscar Coctel"
-                android:textColorHint="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="HardcodedText,MissingConstraints" />
-
             <EditText
                 android:id="@+id/tvnombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="152dp"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:background="@color/colorseagrill"
+                android:layout_marginEnd="232dp"
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/rounded_corner_seagrill"
                 android:ems="10"
                 android:gravity="center"
+
                 android:hint="Nombre del coctel"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
-
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/BuscarCoctel"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
-                app:layout_constraintVertical_bias="0.074"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvdescripcion"
-                android:layout_width="309dp"
-                android:layout_height="71dp"
-                android:layout_marginTop="64dp"
-                android:background="@color/colorseagrill"
+                android:layout_width="match_parent"
+                android:layout_height="155dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="21dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner_seagrill"
                 android:ems="10"
-                android:gravity="start|top"
+                android:gravity="center"
                 android:hint="Descripción"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
@@ -75,17 +63,19 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
+                app:layout_constraintTop_toBottomOf="@+id/tvnombre"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvmetodo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 android:autofillHints="no"
-                android:background="@color/colorseagrill"
+                android:background="@drawable/rounded_corner_seagrill"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Metodo de preparación"
@@ -94,18 +84,19 @@
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.808"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
+                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvdecoracion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                android:background="@color/colorseagrill"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner_seagrill"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Decoración"
@@ -115,7 +106,7 @@
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.191"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
                 tools:ignore="HardcodedText" />
@@ -125,15 +116,18 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
-                android:background="@color/colorseagrill"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="24dp"
+                android:background="@drawable/rounded_corner_seagrill"
                 android:contentDescription="buscar coctel"
                 android:onClick="buscar"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.36"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/tvnombre"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
-                app:layout_constraintVertical_bias="0.444"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.714"
                 app:srcCompat="@android:drawable/ic_menu_search"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
@@ -141,44 +135,49 @@
                 android:id="@+id/botonvolverchiringuito"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="20dp"
                 android:backgroundTint="#333333"
                 android:text="@string/btnvolver"
                 android:textSize="11sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/Signatures"
                 android:layout_width="match_parent"
-                android:layout_height="59dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/colorseagrill"
+                android:layout_height="111dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/rounded_corner_seagrill"
                 android:gravity="center"
                 android:text="Signatures"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/botonvolverchiringuito"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
-                app:layout_constraintVertical_bias="0.106"
+                app:layout_constraintTop_toBottomOf="@+id/tvmetodo"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/americano"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/rounded_corner_seagrill"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:text="AMERICANO"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.079"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imageView2"
+                app:layout_constraintHorizontal_bias="0.477"
+                app:layout_constraintStart_toStartOf="@+id/imageView2"
                 app:layout_constraintTop_toBottomOf="@+id/Signatures"
                 tools:ignore="HardcodedText" />
 
@@ -186,40 +185,43 @@
                 android:id="@+id/marbellamule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/rounded_corner_seagrill"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:text="MARBELLA MULE"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.896"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.482"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/Signatures"
                 tools:ignore="HardcodedText" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="64dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/marbellamule"
-                app:layout_constraintVertical_bias="0.138"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/moscowmule"
                 tools:ignore="ContentDescription" />
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="92dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/americano"
-                app:layout_constraintVertical_bias="0.151"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/americano"
                 tools:ignore="ContentDescription">
 
