--- a/app/src/main/res/layout/activity_supperclub.xml
+++ b/app/src/main/res/layout/activity_supperclub.xml
@@ -22,51 +22,40 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/BuscarCoctel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorsupperclub"
-                android:gravity="center"
-                android:hint="Buscar Coctel"
-                android:textColorHint="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="HardcodedText,MissingConstraints" />
-
             <EditText
                 android:id="@+id/tvnombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="152dp"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:background="@color/colorsupperclub"
+                android:background="@drawable/rounded_corner_supperclub"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Nombre del coctel"
+
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
-
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/BuscarCoctel"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
-                app:layout_constraintVertical_bias="0.074"
+                app:layout_constraintHorizontal_bias="0.084"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvdescripcion"
-                android:layout_width="309dp"
-                android:layout_height="71dp"
-                android:layout_marginTop="64dp"
-                android:background="@color/colorsupperclub"
+                android:layout_width="match_parent"
+                android:layout_height="155dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner_supperclub"
                 android:ems="10"
-                android:gravity="start|top"
+                android:gravity="center"
                 android:hint="Descripción"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
@@ -75,16 +64,18 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
+                app:layout_constraintTop_toBottomOf="@+id/tvnombre"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvmetodo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                android:background="@color/colorsupperclub"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner_supperclub"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Metodo de preparación"
@@ -94,18 +85,20 @@
                 android:textColorHint="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.808"
+                app:layout_constraintHorizontal_bias="0.83"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
+                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
                 tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/tvdecoracion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                android:background="@color/colorsupperclub"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner_supperclub"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Decoración"
@@ -125,14 +118,17 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
-                android:background="@color/colorsupperclub"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="24dp"
+                android:background="@drawable/rounded_corner_supperclub"
                 android:onClick="buscar"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.36"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/tvnombre"
-                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
-                app:layout_constraintVertical_bias="0.444"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.615"
                 app:srcCompat="@android:drawable/ic_menu_search"
                 tools:ignore="ContentDescription,RtlHardcoded" />
 
@@ -140,6 +136,7 @@
                 android:id="@+id/botonvolverchiringuito"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:backgroundTint="#FF333333"
                 android:text="@string/btnvolver"
@@ -147,37 +144,42 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <TextView
                 android:id="@+id/Signatures"
                 android:layout_width="match_parent"
-                android:layout_height="59dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/colorsupperclub"
+                android:layout_height="111dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/rounded_corner_supperclub"
                 android:gravity="center"
                 android:text="Signatures"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/botonvolverchiringuito"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
-                app:layout_constraintVertical_bias="0.106"
+                app:layout_constraintTop_toBottomOf="@+id/tvmetodo"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/aviation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/rounded_corner_supperclub"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:text="AVIATION"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.105"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintStart_toStartOf="@+id/imageView2"
                 app:layout_constraintTop_toBottomOf="@+id/Signatures"
                 tools:ignore="HardcodedText" />
 
@@ -186,39 +188,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/rounded_corner_supperclub"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:text="EXPRESSO MARTINI"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.915"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.547"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/Signatures"
                 tools:ignore="HardcodedText" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="64dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/expressomartini"
-                app:layout_constraintVertical_bias="0.223"
                 app:srcCompat="@drawable/expressomartini"
                 tools:ignore="ContentDescription" />
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="92dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.048"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/aviation"
-                app:layout_constraintVertical_bias="0.244"
                 app:srcCompat="@drawable/aviation"
                 tools:ignore="ContentDescription">
 
