--- a/app/src/main/res/layout/activity_chiringuito.xml
+++ b/app/src/main/res/layout/activity_chiringuito.xml
@@ -25,11 +25,24 @@
             android:layout_height="wrap_content">
 
 
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Metodo de preparación"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="@+id/tvmetodo"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="@+id/tvmetodo"
+                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion" />
+
             <EditText
                 android:id="@+id/tvnombre"
                 android:layout_width="152dp"
                 android:layout_height="53dp"
                 android:layout_gravity="center"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="24dp"
                 android:autofillHints=""
@@ -40,14 +53,26 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.208"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0"
                 tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Ingredientes"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="@+id/tvdescripcion"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/tvdescripcion"
+                app:layout_constraintTop_toBottomOf="@+id/tvnombre" />
 
             <EditText
                 android:id="@+id/tvdescripcion"
@@ -64,12 +89,24 @@
                 android:inputType="textMultiLine"
                 android:textColor="@color/white"
                 android:textColorHint="#FFFFFF"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvnombre"
+                app:layout_constraintTop_toBottomOf="@+id/textView7"
                 tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/decoracion"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="@+id/tvdecoracion"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/tvdecoracion"
+                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion" />
 
             <EditText
                 android:id="@+id/tvmetodo"
@@ -87,11 +124,11 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
+                app:layout_constraintTop_toBottomOf="@+id/textView10"
                 tools:ignore="HardcodedText" />
 
             <EditText
@@ -109,11 +146,11 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.148"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
+                app:layout_constraintTop_toBottomOf="@+id/textView9"
                 tools:ignore="Autofill" />
 
             <ImageButton
@@ -123,16 +160,15 @@
                 android:layout_gravity="right"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="24dp"
                 android:background="@drawable/rounded_corner_chiringuito"
                 android:contentDescription="Buscar coctel"
                 android:onClick="buscar"
-                app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
+                app:layout_constraintBottom_toTopOf="@+id/textView7"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.013"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/tvnombre"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.769"
+                app:layout_constraintVertical_bias="0.216"
                 app:srcCompat="@android:drawable/ic_menu_search"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
