--- a/app/src/main/res/layout/activity_supperclub.xml
+++ b/app/src/main/res/layout/activity_supperclub.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@+id/BuscarCoctel"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,20 +27,21 @@
                 android:layout_width="152dp"
                 android:layout_height="53dp"
                 android:layout_gravity="center"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/rounded_corner_supperclub"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="Nombre del coctel"
 
+                android:hint="Nombre del coctel"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.084"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
@@ -56,16 +57,29 @@
                 android:background="@drawable/rounded_corner_supperclub"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="Descripción"
+                android:hint="Ingredientes"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvnombre"
+                app:layout_constraintTop_toBottomOf="@+id/textView7"
                 tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Ingredientes"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="@+id/tvdescripcion"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/tvdescripcion"
+                app:layout_constraintTop_toBottomOf="@+id/tvnombre" />
 
             <EditText
                 android:id="@+id/tvmetodo"
@@ -83,11 +97,11 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.83"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
+                app:layout_constraintTop_toBottomOf="@+id/textView6"
                 tools:ignore="HardcodedText" />
 
             <EditText
@@ -96,7 +110,7 @@
                 android:layout_height="53dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/rounded_corner_supperclub"
                 android:ems="10"
@@ -106,13 +120,35 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="12sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.191"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
+                app:layout_constraintTop_toBottomOf="@+id/textView8"
                 tools:ignore="HardcodedText" />
 
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/decoracion"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="@+id/tvdecoracion"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/tvdecoracion"
+                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Metodo de preparación"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="@+id/tvmetodo"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="@+id/tvmetodo"
+                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion" />
             <ImageButton
                 android:id="@+id/buscar"
                 android:layout_width="36dp"
@@ -120,15 +156,14 @@
                 android:layout_gravity="right"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="24dp"
                 android:background="@drawable/rounded_corner_supperclub"
                 android:onClick="buscar"
-                app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
+                app:layout_constraintBottom_toTopOf="@+id/textView7"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/tvnombre"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.615"
+                app:layout_constraintVertical_bias="0.243"
                 app:srcCompat="@android:drawable/ic_menu_search"
                 tools:ignore="ContentDescription,RtlHardcoded" />
 
